--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -274,7 +274,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="job.html"><img src="assets/img/course/01.jpg" alt=""></a>
+                                <a href="job.html"><img src="assets/img/course/architect.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
                                 <h4 class="text_align"><a href="job.html">AEM Architects</a></h4>
@@ -285,7 +285,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="job.html"><img src="assets/img/course/02.jpg" alt=""></a>
+                                <a href="job.html"><img src="assets/img/course/developer.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
                                 <h4 class="text_align"><a href="job.html">AEM Developer </a></h4>
@@ -296,7 +296,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="job.html"><img src="assets/img/course/04.jpg" alt=""></a>
+                                <a href="job.html"><img src="assets/img/course/manager.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
                                 <h4 class="text_align"><a href="job.html">AEM manager</a></h4>
@@ -307,7 +307,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="job.html"><img src="assets/img/course/03.jpg" alt=""></a>
+                                <a href="job.html"><img src="assets/img/course/fullstack.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
                                 <h4 class="text_align"><a href="job.html">AEM Full stack developers</a></h4>
@@ -318,7 +318,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="job.html"><img src="assets/img/course/05.jpg" alt=""></a>
+                                <a href="job.html"><img src="assets/img/course/qa.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
                                 <h4 class="text_align"><a href="job.html">AEM QA senior consultant</a></h4>
