--- a/preview.colorlib.com/theme/instylr/about.html
+++ b/preview.colorlib.com/theme/instylr/about.html
@@ -92,12 +92,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-7 order-2 order-lg-1 intro-text">
-          <span>Aenean quis velit pulvinar,</span>
-          <h2>"I firmly believe that with the right footwear one can rule the world."</h2>
-          <p>Aenean quis velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel
-            justo eget malesuada. In arcu justo, sagittis consequat pulvinar quis, pretium quis massa. Vestibulum nec
-            nibh eu nisi rutrum iaculis. Pellentesque placerat sit amet leo in vestibu-lum. Suspendisse quam neque,
-            rutrum vel scelerisque eu</p>
+          <span>Botiqueprism is a fashion brand,</span>
+          <h2>"Offering the latest styles and inspiration for all — always."</h2>
+          <p>Customers will find 
+            everything from fashion pieces and unique designer collaborations to affordable wardrobe essentials, complete-thelook accessories and motivational workout wear. All seasons, all styles, all welcome! But Botiqueprism is more than 
+            just fashion. With price, quality and sustainability deeply rooted in its DNA, botiqueprism is not only a possibility for 
+            everyone to explore their personal style, but it also offers a chance to create a more sustainable fashion future. Visit 
+            hm.com for more information or follow @botiqueprism for daily inspiration</p>
           <a href="#" class="site-btn sb-dark">Read More <i class="fa fa-angle-double-right"></i></a>
         </div>
         <div class="col-lg-5 order-1 order-lg-2">
@@ -180,24 +181,23 @@
   <section class="brand-history-section spad">
     <div class="container">
       <div class="section-title text-center">
-        <span>Aenean quis velit pulvinar,</span>
+        <span>Boutique Prism</span>
         <h2>The Brand History</h2>
       </div>
       <div class="row justify-content-md-center">
         <div class="col-lg-10">
           <div class="brand-history-item">
             <h2>2005</h2>
-            <h4>Aenean quis velit pulvinar, pellentesque </h4>
-            <p>Aenean quis velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel
-              justo eget malesuada. In arcu justo, sagittis consequat pulvinar quis, pretium quis massa. Vestibulum nec
-              nibh eu nisi rutrum iaculis.</p>
+            <h4>The Boutiqueprism goes both west and east </h4>
+            <p>New brands are added to the family, and Karl Lagerfeld makes a surprising 
+              announcement to the world of fashion.
+              </p>
           </div>
           <div class="brand-history-item">
-            <h2>2008</h2>
-            <h4>Suspendisse rhoncus turpis </h4>
-            <p>Aenean quis velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel
-              justo eget malesuada. In arcu justo, sagittis consequat pulvinar quis, pretium quis massa. Vestibulum nec
-              nibh eu nisi rutrum iaculis.</p>
+            <h2>2010 and onwards</h2>
+            <h4>Boutiqueprism opens the first stores </h4>
+            <p>In the Southern hemisphere, old garments are given a new life and & Other 
+              Stories is launched, followed by ARKET.</p>
           </div>
         </div>
       </div>
