--- a/preview.colorlib.com/theme/instylr/blog.html
+++ b/preview.colorlib.com/theme/instylr/blog.html
@@ -34,8 +34,8 @@
   <header class="header-section">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
       <a class="navbar-brand site-logo" href="index.html#">
-        <h2><span>LO</span>GO</h2>
-        <p>Fashion Forward</p>
+        <h2><span>BOUTIQUE</span>PRISM</h2>
+        <p>The Exclusive Fashion Brand</p>
       </a>
       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
         aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
@@ -89,7 +89,7 @@
 
   <section class="hero-section " style="padding-top: 30px; display: flex;" >
     <div class="hero-slider owl-carousel">
-      <div class="hs-item set-bg" data-setbg="" data-hash="slide-1" style="height: 600px;">
+      <div class="hs-item set-bg" data-setbg="" data-hash="slide-1" style="height: 400px;">
         <div class="container">
           <h2 style="color: black;">The ultimate guide to handbags</h2> <br>
           <h4 style="color: black;">What bag to choose and when to wear it</h4> <br>
@@ -98,7 +98,7 @@
         </div>
 
       </div>
-      <div class="hs-item set-bg" data-setbg="" data-hash="slide-2" style="height: 600px;">
+      <div class="hs-item set-bg" data-setbg="" data-hash="slide-2" style="height: 400px;">
         <div class="container">
           <h2 style="color: black;">Men's capsule wardrobe</h2> <br>
           <h4 style="color: black;">A capsule wardrobe is a versatile, stylish and sustainable way to shop</h4> <br>
@@ -107,7 +107,7 @@
         </div>
 
       </div>
-      <div class="hs-item set-bg" data-setbg="img/slider/2.jpg" data-hash="slide-2" style="height: 600px;">
+      <div class="hs-item set-bg" data-setbg="img/slider/2.jpg" data-hash="slide-2" style="height: 400px;">
         <div class="container">
           <h2>How to reinvent your summer staples
           </h2> <br>
@@ -381,9 +381,9 @@
         <div class="col-lg-3 col-sm-6">
           <div class="footer-widget fw-about">
             <a class="navbar-brand site-logo" href="index.html#">
-              <h2><span>LOGO</span></h2>
+              <h2><span>BOUTIQUE PRISM</span></h2>
             </a>
-            <p>Fashion Designers</p>
+            <p>The Exclusive Fashion Brand</p>
 
             <p>Velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget
               malesu ada. In arcu justo, sagittis consequat pulvinar.</p>
