--- a/preview.colorlib.com/theme/instylr/single-blog.html
+++ b/preview.colorlib.com/theme/instylr/single-blog.html
@@ -34,8 +34,8 @@
   <header class="header-section">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark site-navbar">
       <a class="navbar-brand site-logo" href="index.html#">
-        <h2><span>LO</span>GO</h2>
-        <p>Fashion Forward</p>
+        <h2><span>BOUTIQUE</span>PRISM</h2>
+        <p>The Exclusive Fashion Brand</p>
       </a>
       <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
         aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
@@ -278,8 +278,8 @@
         <div class="col-lg-3 col-sm-6">
           <div class="footer-widget fw-about">
             <a class="navbar-brand site-logo" href="index.html#">
-              <h2><span>LOGO</span></h2> </a>
-              <p>Fashion Designers</p>
+              <h2><span>BOUTIQUE PRISM</span></h2> </a>
+              <p>The Exclusive Fashion Brand</p>
 
             <p>Velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget
               malesu ada. In arcu justo, sagittis consequat pulvinar.</p>
