--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -33,7 +33,8 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;" alt="" /></a>
+                            <a href="index.html"><img src="assets/img/4x/Main4@4x.png" style="width:170px;"
+                                    alt="" /></a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -156,7 +157,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-8 offset-xl-2">
-                       <!-- <div class="page-title text-center">
+                        <!-- <div class="page-title text-center">
                             <h1>Our Courses</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
@@ -169,52 +170,108 @@
                 </div>
             </div>
         </section>
-        <!--page-title-area end--> 
+        <!--page-title-area end-->
 
- <!-- brand-area-start -->
- <div class="brand-area blue-soft-bg3 pb-65 pt-65">
-    <div class="container">
-        <div class="row brand-active">
-            <div class="col-xl-12 text-center" style="with 100%">
-                <div class="single-brand text-center">
-                  <!--  <img src="assets/img/brand/06.png" alt=""> -->
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, sit!
-                  </p>
+
+        <!--  <div class="carousel">
+                <div class="carousel-slide">
+                  <div class="carousel-item">
+                    <h2>Slide 1</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a class="carousel-cta" href="#">Learn More</a>
+                  </div>
+                  <div class="carousel-item">
+                    <h2>Slide 2</h2>
+                    <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <a class="carousel-cta" href="#">Get Started</a>
+                  </div>
+                  <div class="carousel-item">
+                    <h2>Slide 3</h2>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+                    <a class="carousel-cta" href="#">Buy Now</a>
+                  </div>
+                </div>
+                <button class="carousel-prev">&#10094;</button>
+                <button class="carousel-next">&#10095;</button>
+              </div> -->
+
+        <div class="testimonial-area pt-130 pb-100" data-background="">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
+                        <div class="section-title text-center section-title-white  mb-60">
+                            <!--  <span><i class="fal fa-ellipsis-h"></i> Students Feedback <i
+                                        class="fal fa-ellipsis-h"></i></span> -->
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12">
+                        <div class="testimonial-active">
+                            <div class="testimonial-wrapper mb-30">
+                                <div class="testimonial-text"
+                                    style="display: block; justify-content: center; align-items: center; width: 100%; padding-left: 38%;">
+                                    <h4></h4>
+                                    <h2 style="color: black;">Top Courses in demand</h2>
+                                    <!-- <span style="font-size:16px;">
+                                            Nxtech's AEM course helped me launch my career as a developer. We learned
+                                            from experts, who were greatly dedicated to our placement. We were guided
+                                            right from the beginning - from how to create an impressive resume, to how
+                                            to handle the pressure of job interviews. Their industry tie-ups helped me
+                                            secure my first job!
+                                        </span> -->
+
+
+
+
+                                    <br>
+
+                                    <button type="submit" class="Confirmbtn"
+                                        style="border-radius: 5px; height: 40PX; width: 150px; margin-left: 23%; ">Know more</button>
+
+
+
+                                </div>
+                            </div>
+                            <div class="testimonial-wrapper mb-30" >
+                                <div class="testimonial-text"
+                                    style="display: block; justify-content: center; align-items: center; width: 100%; padding-left: 38%;">
+                                    <h4></h4>
+                                    <h2 style="color: black;">Top Courses in demand</h2>
+                                    <!-- <span style="font-size:16px;">
+                                            Nxtech's AEM course helped me launch my career as a developer. We learned
+                                            from experts, who were greatly dedicated to our placement. We were guided
+                                            right from the beginning - from how to create an impressive resume, to how
+                                            to handle the pressure of job interviews. Their industry tie-ups helped me
+                                            secure my first job!
+                                        </span> -->
+
+
+
+
+                                    <br>
+
+                                    <button type="submit" class="Confirmbtn"
+                                        style="border-radius: 5px; height: 40PX; width: 150px; margin-left: 27%; ">Register</button>
+
+
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <!-- <div class="col-xl-6 col-lg-6">
+                            <div class="test-img mb-30">
+                                <img src="assets/img/testimonial/test.png" alt="">
+                            </div>
+                        </div> -->
                 </div>
             </div>
-            <div class="col-xl-12 text-center" style="with 100%">
-                <div class="single-brand text-center">
-                  <!--  <img src="assets/img/brand/06.png" alt=""> -->
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, sit!
-                  </p>
-                </div>
-            </div>
-            <div class="col-xl-12 text-center" style="with 100%">
-                <div class="single-brand text-center">
-                  <!--  <img src="assets/img/brand/06.png" alt=""> -->
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, sit!
-                  </p>
-                </div>
-            </div>
-          <!--  <div class="col-xl-12 text-center"">
-                <div class="single-brand">
-                    <img src="assets/img/brand/09.png" alt="">
-                </div>
-            </div>
-            <div class="col-xl-12 text-center"">
-                <div class="single-brand">
-                    <img src="assets/img/brand/10.png" alt="">
-                </div>
-            </div>
-            <div class="col-xl-12 text-center"">
-                <div class="single-brand">
-                    <img src="assets/img/brand/06.png" alt="">
-                </div>
-            </div> -->
         </div>
-    </div>
-</div>
-<!-- brand-area-end -->
+        <!-- testimonial-area-end -->
+
 
 
         <!-- course-area-start -->
@@ -281,7 +338,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i
+                                <a class="c-btn mb-50" href="course-consult.html">Consult us <i
                                         class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
@@ -351,8 +408,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i
-                                        class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -421,8 +477,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i
-                                        class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -490,8 +545,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i
-                                        class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -560,8 +614,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i
-                                        class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -630,8 +683,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i
-                                        class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -769,8 +821,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i
-                                        class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -839,8 +890,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i
-                                        class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -868,7 +918,7 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 offset-lg-3 offset-xl-3">
                         <div class="section-title text-center mb-65">
-                           <!-- <span><i class="fal fa-ellipsis-h"></i> Team Members <i
+                            <!-- <span><i class="fal fa-ellipsis-h"></i> Team Members <i
                                     class="fal fa-ellipsis-h"></i></span> -->
                             <h2>Expert Instructors</h2>
                         </div>
@@ -1138,7 +1188,7 @@
                                     <strong>Phone:</strong> +91 7975935848, +91 7204025956<br>
                                     <strong>Email:</strong> info@nxtecs.com<br>
                                 </p>
-                                
+
                             </div>
                         </div>
 
@@ -1151,8 +1201,8 @@
                                 <li><i class="far fa-angle-right"></i> <a href="about_us.html" class="link">About
                                         us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Skills</a></li>
-                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html"
-                                        class="link">Contact us</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html" class="link">Contact
+                                        us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Privacy policy</a>
                                 </li>
                             </ul>
@@ -1180,7 +1230,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post" style="display: flex;">
                                 <input type="email" name="email" style="width: 100%; height: 50px;">
-                                <button class="btn-ftr" type="submit" style="width: 60px; background-color: #002356; border: none;"><i class="far fa-paper-plane" style="color: white;"></i></button>
+                                <button class="btn-ftr" type="submit"
+                                    style="width: 60px; background-color: #002356; border: none;"><i
+                                        class="far fa-paper-plane" style="color: white;"></i></button>
                             </form>
 
                         </div>
