--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -226,7 +226,7 @@
                             <div id="id01" class="modal">
                                 <span onclick="document.getElementById('id01').style.display='none'" class="close"
                                     title="Close Modal">&times;</span>
-                                <form class="modal-content" action="/action_page.php" style="text-align: left;">
+                                <form class="modal-content" action="/action_page.php" style="text-align: left; width: 500PX;">
                                     <div class="container">
                                         <a href="index.html"><i class="fas fa-times"
                                             style="color: BLACK;"></i></a>
@@ -244,7 +244,7 @@
                                         <input type="email" placeholder="Enter your email" name="email" required>
                                         
                                         <label for="email"><b>Courses want to know</b></label>
-                                        <input type="email" placeholder="Enter Course name" name="email" required>
+                                        <input type="text" placeholder="Enter Course name" name="text" required>
                                             <br>
                                         <!-- <label>
                                             <input type="checkbox" checked="checked" name="remember"
@@ -601,6 +601,29 @@
                             </div>
                             <div class="team-text">
                                 <h4 class="text_align"><a href="">Chaithra V</a></h4>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-3 col-md-6">
+                        <div class="team-wrapper mb-30">
+                            <div class="team-img pos-rel">
+                                <div class="fix">
+                                    <img src="assets/img/team/shetty.png" alt="">
+                                </div>
+                                <div class="team-02-icon">
+                                    <div class="inner-team-icon pos-rel">
+                                        <div class="team-icon">
+                                            <a class="twitter" href="#"><i class="fab fa-twitter"></i></a>
+                                            <a class="google" href="#"><i class="fab fa-youtube"></i></a>
+                                            <a class="fb" href="#"><i class="fab fa-facebook-f"></i></a>
+                                        </div>
+                                        <a href="#"><i class="fal fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-text">
+                                <h4 class="text_align"><a href="">Pavan Shetty</a></h4>
 
                             </div>
                         </div>
