--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<li><a href="./fastkart/front-end/index.html">E-commerce</a></li>
 		<li><a href="./preview.colorlib.com/theme/instylr/index.html">Botique</a></li>
 		<li><a href="./kinder/index.html">Pre-school</a></li>
-		<li><a href="./nxtecs/index.html">Learntec</a></li>
-		<li><a href="./Chow restaurant/theme/index.html">Chow restaurant</a></li>
+		<li><a href="./learntec/index.html">Learntec</a></li>
+		<li><a href="./Chow/index.html">Chow restaurant</a></li>
 
 	</ul>
 	<ul>
