--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 	<ul>
-		<li><a href="./fastkart/front-end/index.html">E-commerce</a></li>
-		<li><a href="./preview.colorlib.com/theme/instylr/index.html">Botique</a></li>
+		<li><a href="./e-commerce/fastkart/index.html">E-commerce</a></li>
+		<li><a href="./BoutiquePrism/index.html">Botique</a></li>
 		<li><a href="./kinder/index.html">Pre-school</a></li>
 		<li><a href="./learntec/index.html">Learntec</a></li>
 		<li><a href="./Chow/index.html">Chow restaurant</a></li>
