--- a/learntec/curriculum.html
+++ b/learntec/curriculum.html
@@ -77,10 +77,10 @@
                     <div class="col-xl-3 col-lg-5 col-md-6 col-4">
                         <div class="header-right d-sm-flex align-items-center justify-content-end">
                             <div class="footer-social-icon d-none d-md-inline-block">
-                                <a class="fot-fb active" href="#"><i class="fab fa-facebook"></i></a>
-                                <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="fot-google" href="#"><i class="fab fa-youtube"></i></a>
-                                <a class="fot-insta" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="fot-fb active" href="#"><img src="Facebook-Splash-Icon-PNG-S-09idfd.png" alt="" style="height: 40px; width: 40px;"></a>
+                                <a class="fot-twitter" href="#"><!--<i class="fab fa-twitter"></i>--><img src="Twitter-Splash-Icon-PNG-S-09idfd.png" alt="" style="height: 40px; width: 40px;"></a>
+                                <a class="fot-google" href="#"><img src="YouTube-Splash-Icon-PNG-S-09idfd.png" alt="" style="height: 40px; width: 40px;"></a>
+                                <a class="fot-insta" href="#"><img src="Instagram-Splash-Icon-PNG-S-09idfd.png" alt="" style="height: 40px; width: 40px;"></a>
                             </div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <!--<div class="header-sing d-none d-md-inline-block">
                                     <a href="contact.html"> <i class="far fa-user-circle"></i>sing in</a>
@@ -439,10 +439,10 @@
 
             <div class="container1">
                 <div class="footer-social-icon text-right ">
-                    <a class="fot-fb active" href="#"><i class="fab fa-facebook"></i> Facebook</a>
-                    <a class="fot-twitter" href="#"><i class="fab fa-twitter"></i> Twitter</a>
-                    <a class="fot-google" href="#"><i class="fab fa-youtube"></i> Youtube</a>
-                    <a class="fot-insta" href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                    <a class="fot-fb active" href="#"><img src="Facebook-Splash-Icon-PNG-S-09idfd.png" alt="" style="height: 40px; width: 40px;"> Facebook</a>
+                    <a class="fot-twitter" href="#"><img src="Twitter-Splash-Icon-PNG-S-09idfd.png" alt="" style="height: 40px; width: 40px;"> Twitter</a>
+                    <a class="fot-google" href="#"><img src="YouTube-Splash-Icon-PNG-S-09idfd.png" alt="" style="height: 40px; width: 40px;"> Youtube</a>
+                    <a class="fot-insta" href="#"><img src="Instagram-Splash-Icon-PNG-S-09idfd.png" alt="" style="height: 40px; width: 40px;"> Instagram</a>
                 </div>
                 <br>
             </div>
